--- a/css/style.css
+++ b/css/style.css
@@ -2488,6 +2488,42 @@ span.email-notes {
 .mt-4{
   padding-bottom: 20px;
 }
+
 /*----------------------------------------
  .End CSS
 ----------------------------------------*/
+
+.caja-logeo{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background: gray;
+  display: none;
+}
+
+.logeo{
+  background: cyan;
+  position: absolute;
+  top: 150px;
+  left: 460px;
+  width: 500px;
+  height: 400px;
+}
+
+.todo-logeo{
+  position: absolute;
+  top: 30px;
+  left: 85px;
+}
+.cuerpo-logeo{
+  position: absolute;
+  left: 42px;
+}
+
+#img-logeo{
+  width: 20px;
+  height: 20px;
+  right: 5px;
+  top: 5px;
+  position: absolute;
+}
